Incorrect evaluation of resolution media queries https://bugs.webkit.org/show_bug.cgi?id=114029

Patch by Rune Lillesveen <rune@opera.com> on 2013-04-11
Reviewed by Kenneth Rohde Christiansen.

.:

Removed setResolutionOverride from exports.

* Source/autotools/symbols.filter:

Source/WebCore:

The implementation used the physical resolution to evaluate the
resolution media features. Changed to use the actual CSS resolution,
also known as the device-pixel-ratio, instead. Unified the code for
evaluating the resolution and device-pixel-ratio media features.

No new tests, covered by existing tests.

* WebCore.exp.in:
* css/CSSPrimitiveValue.h:
(WebCore::CSSPrimitiveValue::isResolution):
* css/MediaQueryEvaluator.cpp:
(WebCore::evalResolution):
(WebCore::device_pixel_ratioMediaFeatureEval):
(WebCore::resolutionMediaFeatureEval):
* page/Screen.cpp:
* page/Screen.h:
* page/Settings.cpp:
(WebCore):
* page/Settings.h:
(Settings):
* testing/InternalSettings.cpp:
(WebCore::InternalSettings::Backup::Backup):
(WebCore::InternalSettings::Backup::restoreTo):
* testing/InternalSettings.h:
(Backup):
(InternalSettings):
* testing/InternalSettings.idl:

Source/WebKit:

Removed setResolutionOverride from exports.

* WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:

Source/WebKit/win:

Removed setResolutionOverride from exports.

* WebKit.vcproj/WebKitExports.def.in:

LayoutTests:

Modified tests to change CSS resolution instead of physical resolution.

* fast/media/mq-resolution.html:

Canonical link: https://commits.webkit.org/132801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148186 268f45cc-cd09-0410-ab3c-d52691b4dbfc